src/in/components/schedule/Schedule.css
.calendar {
    width: 60vw;
    margin-left: 5vw;
    float: left;
}

.right {
    width: 20vw;
    margin-right: 5vw;
    float: right;
}

* {
    box-sizing: border-box;
}


.todo-app__list {
    list-style: none;
    padding: 0;
    /* 5*5=25 */
}

.todo-app__item {
    position: relative;
    width: 100%;
    min-height: 5em;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    background: white;
    border: 1px solid rgba(0, 0, 0, 0.089);
    border-top: 0;
}

.todo-app__item-detail {
    font-weight: 300;
    overflow-wrap: break-word;
    width: 90%;
    transition: opacity 0.3s;
    height: 100%;
}

.todo-app__total {
    min-width: 3em;
}

.todo-app__view-buttons {
    display: flex;
    margin: 0;
    margin-left: 2em;
    padding: 0;
    width: 12em;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    list-style: none;
}

.todo-app__view-buttons button {
    border: none;
    padding: 5px;
    font-size: 0.8em;
    font-weight: inherit;
    border: 1px solid transparent;
    border-radius: 5px;
    cursor: pointer;
}

.todo-app__view-buttons button:focus {
    outline: none;
}

.todo-app__clean {
    vertical-align: middle;
}

.todo-app__clean button {
    border: none;
    padding: 5px;
    border: 1px solid transparent;
    font-size: 0.8em;
    font-weight: inherit;
    cursor: pointer;
}

.todo-app__clean button:focus {
    outline: none;
}

.todo-app__clean button:hover {
    text-decoration: underline;
}

.todo-item-input {
    font-size: 1.5em;
    font-weight: 300;
    overflow-wrap: break-word;
    width: 80%;
    min-height: 3em;
    transition: opacity 0.3s;
    border: none;
}

.todo-item-input:focus {
    outline: none;
}

.todo-app__item-x {
    display: none;
}

.todo-app__item:hover .todo-app__item-x {
    display: inline;
    position: absolute;
    max-width: 20px;
    max-height: 20px;
    right: 20px;
}

.todo-app__item:hover .todo-app__item-x:hover {
    max-width: 25px;
    max-height: 25px;
    right: 17.5px;
}

